[package]
name = "eth-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
# Networking
tokio = { version = "1.35.1", features = ["full"] }

# Encoding
alloy-rlp = { version = "0.3.3", features = ["derive", "arrayvec"] }
serde = { version = "1.0.193" }
alloy-primitives = { version = "0.5.3", features = ["rand", "rlp", "serde"] }
snap = "1.1.1"

# Cryptography
secp256k1 = { version = "0.28.0", features = ["global-context", "rand-std", "recovery"] }
ecies = {version = "0.2", features = ["std"]}
sha2 = "0.10.8"
sha3 = "0.10.8"
ctr = "0.9.2"
aes = "0.8.1"
hmac = "0.12.1"
digest = "0.10.7"
cipher = { version = "0.4.4", features = ["block-padding"] }
strum = { version = "0.25", features = ["derive"] }
crc = "3.0.1"

# Utilities
rand = {version = "0.8.5"}
num_enum = "0.7.1"
thiserror = "1.0.52"
bytes = "1.5.0"
block-padding = "0.3.3"
regex = "1.10.2"

# HeaderBytes
generic-array = "1.0.0"
typenum = "1.17.0"
byteorder = "1.5.0"

[[bin]]
name = "eth-handshake"
path = "main.rs"
